# VINS_Mobile_AndroidPort

./: build.gradle  gradle.properties
OpenCV-android-sdk_3_4_6/samples/: example-15-puzzle.apk  example-camera-calibration.apk  (+6 more)
app/: CMakeLists.txt  build.gradle
app/libs/VINS-Mobile-master/: CMakeLists.txt
app/libs/VINS-Mobile-master/VINS_ThirdPartyLib/: CMakeLists.txt
app/libs/VINS-Mobile-master/VINS_ThirdPartyLib/ceres-solver/jni/: Application.mk
app/libs/VINS-Mobile-master/VINS_ios/: CMakeLists.txt  VINS.cpp  draw_result.cpp  feature_tracker.cpp  feature_tracker.hpp  global_param.cpp  global_param.hpp
app/libs/VINS-Mobile-master/VINS_ios/loop/: TemplatedLoopDetector.h  demoDetector.h  keyframe.cpp  keyframe.h  loop_closure.cpp  loop_closure.h
app/libs/VINS-Mobile-master/jni/: CMakeLists.txt
app/libs/VINS-Mobile-master/jni/object_tracking/: object_tracker_jni.cc
app/src/main/: AndroidManifest.xml
app/src/main/cpp/VINS_Android/: CMakeLists.txt  ViewController.cpp  ViewController.hpp
app/src/main/cpp/jni/: nativelib.cpp
app/src/main/java/com/thkoeln/jmoeller/vins_mobile_androidport/: AutoFitTextureView.java  CameraConnectionFragment.java  Classifier.java  DNNObjectDetection.java  DeviceListFragment.java  LegacyCameraConnectionFragment.java  MainActivity.java  MovementDetector.java  OverlayView.java  PeerManager.java  TFLiteObjectDetectionAPIModel.java  VinsJNI.java  WiFiDirectBroadcastReceiver.java
app/src/main/java/com/thkoeln/jmoeller/vins_mobile_androidport/backup/: DeviceDetailFragment.java_190421  DeviceListFragment.java_190421  DistributedARActivity.java_190421  FileTransferService.java_190421  MainActivityTestTFLite.java.backup_190602  WiFiDirectBroadcastReceiver.java_190421  WiFiDirectServicesList.java_190421  WiFiP2pService.java_190421  XukanActivity.java._190222_
app/src/main/java/com/thkoeln/jmoeller/vins_mobile_androidport/backup/191130/: MainActivity.java_backup
app/src/main/java/com/thkoeln/jmoeller/vins_mobile_androidport/backup/191210/: MainActivity.java_backup_wifidirect
app/src/main/java/com/thkoeln/jmoeller/vins_mobile_androidport/backup/191214/: MainActivity.java_backup_Serialization
app/src/main/java/com/thkoeln/jmoeller/vins_mobile_androidport/backup/200204/: keyframe.cpp_backup_200204
app/src/main/java/com/thkoeln/jmoeller/vins_mobile_androidport/env/: BorderedText.java  ImageUtils.java  Logger.java  Size.java
app/src/main/java/com/thkoeln/jmoeller/vins_mobile_androidport/tracking/: MultiBoxTracker.java  ObjectTracker.java
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_main_xukan.xml  camera_connection_fragment_tracking.xml  device_list_fragment.xml
app/src/main/res/values/: strings.xml
(+1 files in other folders)
